--- a/app/src/main/res/layout/manuka_admin_fragment_past_orders.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_past_orders.xml
@@ -44,6 +44,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/textHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_8sdp"
