manuka - admin ads no results updated

--- a/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_approved_rejected.xml
@@ -51,6 +51,10 @@
         android:textSize="@dimen/_10sdp"
         android:textStyle="italic" />
 
+    <include
+        android:id="@+id/noDataFragment"
+        layout="@layout/manuka_empty_data_indicator" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshMyadds"
         android:layout_width="match_parent"
