--- a/app/src/main/res/layout/manuka_activity_filter_ads.xml
+++ b/app/src/main/res/layout/manuka_activity_filter_ads.xml
@@ -24,6 +24,10 @@
         android:textSize="@dimen/_10sdp"
         android:textStyle="italic" />
 
+    <include
+        android:id="@+id/noDataFragment"
+        layout="@layout/manuka_empty_data_indicator" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshMyadds"
         android:layout_width="match_parent"
