--- a/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_new_ads.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:background="@color/colorHome"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".ui.administration.advertisement.NewAds">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorHome"
+    android:orientation="vertical"
+    tools:context=".ui.administration.advertisement.NewAds">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginBottom="@dimen/_2sdp"
         android:paddingStart="@dimen/_12sdp"
-        android:layout_marginTop="@dimen/_4sdp"
         android:paddingBottom="@dimen/_4sdp"
         android:text="@string/reviewAdsTitle"
         android:textSize="@dimen/_10sdp"
         android:textStyle="italic" />
 
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/swipeRefreshMyadds"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <include
+        android:id="@+id/noDataFragment"
+        layout="@layout/manuka_fragment_no_data" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myaddsRecycle"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshMyadds"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginEnd="@dimen/_4sdp"/>
+        android:layout_height="wrap_content">
 
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/myaddsRecycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
