--- a/app/src/main/res/layout/manuka_admin_orders_fragment_recent_orders.xml
+++ b/app/src/main/res/layout/manuka_admin_orders_fragment_recent_orders.xml
@@ -21,6 +21,8 @@
         android:textSize="@dimen/_10sdp"
         android:textStyle="italic" />
 
+    <include android:visibility="gone" android:id="@+id/noDataLayout" layout="@layout/manuka_empty_data_indicator"/>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshMyadds"
         android:layout_width="match_parent"
