--- a/app/src/main/res/layout/manuka_admin_fragment_order_sales.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_order_sales.xml
@@ -87,135 +87,148 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
+        <include
+            android:visibility="gone"
+            android:id="@+id/noDataLayout"
+            layout="@layout/manuka_empty_data_indicator" />
+
+        <LinearLayout
+            android:id="@+id/chartLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:text="@string/orders_completed_bar"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic" />
+            android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_280sdp"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:elevation="@dimen/_14sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/barChart"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_12sdp"
+                android:text="@string/orders_completed_bar"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="italic" />
 
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:text="@string/order_piechart_ratio_order_status"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_220sdp"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:elevation="@dimen/_14sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/pieChart"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="@dimen/_280sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:elevation="@dimen/_14sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardUseCompatPadding="true">
 
-        </androidx.cardview.widget.CardView>
+                <com.github.mikephil.charting.charts.BarChart
+                    android:id="@+id/barChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:text="@string/order_completed_ratio_payment"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic" />
+            </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_220sdp"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:elevation="@dimen/_14sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/pieChart2"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:text="@string/order_piechart_ratio_order_status"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="italic" />
 
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:text="@string/order_cancelled_ratio_payment"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_220sdp"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:elevation="@dimen/_14sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/pieChart3"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="@dimen/_220sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:elevation="@dimen/_14sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardUseCompatPadding="true">
 
-        </androidx.cardview.widget.CardView>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/pieChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:text="@string/orders_stat_line"
-            android:textSize="@dimen/_10sdp"
-            android:textStyle="italic" />
+            </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_260sdp"
-            android:layout_margin="@dimen/_4sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:elevation="@dimen/_14sdp"
-            app:cardCornerRadius="@dimen/_8sdp"
-            app:cardUseCompatPadding="true">
-
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/lineChart"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:text="@string/order_completed_ratio_payment"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="italic" />
 
-        </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_220sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:elevation="@dimen/_14sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardUseCompatPadding="true">
+
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/pieChart2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:text="@string/order_cancelled_ratio_payment"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="italic" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_220sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:elevation="@dimen/_14sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardUseCompatPadding="true">
+
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/pieChart3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:text="@string/orders_stat_line"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="italic" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_260sdp"
+                android:layout_margin="@dimen/_4sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:elevation="@dimen/_14sdp"
+                app:cardCornerRadius="@dimen/_8sdp"
+                app:cardUseCompatPadding="true">
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/lineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </LinearLayout>
 
