--- a/app/src/main/res/layout/manuka_custom_no_access_dialog.xml
+++ b/app/src/main/res/layout/manuka_custom_no_access_dialog.xml
@@ -58,7 +58,9 @@
             android:id="@+id/button"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_32sdp"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/_8sdp"
+            android:paddingBottom="@dimen/_8sdp"
             android:paddingStart="@dimen/_40sdp"
             android:paddingEnd="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_20sdp"
