--- a/app/src/main/res/layout/manuka_activity_myadds.xml
+++ b/app/src/main/res/layout/manuka_activity_myadds.xml
@@ -12,7 +12,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar"/>
 
     <FrameLayout
         android:id="@+id/frameLayout"
