--- a/app/src/main/res/layout/ravindu_activity_bugs.xml
+++ b/app/src/main/res/layout/ravindu_activity_bugs.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.getintouch.BugsActivity"
-    android:background="@color/colorHome">
+    tools:context=".BugsActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,9 +23,8 @@
                 android:id="@+id/bugIdText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+
                 android:padding="10dp"
-                android:text="@string/BugIdTextStirng"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold">
@@ -49,8 +47,7 @@
                 android:id="@+id/bugDescription1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="@string/BugDescriptionText">
+                android:padding="10dp">
 
             </TextView>
 
