--- a/app/src/main/res/layout/ravindu_activity_bugs_actions.xml
+++ b/app/src/main/res/layout/ravindu_activity_bugs_actions.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".ui.getintouch.BugsActionsActivity"
-    android:background="@color/colorHome">
+    tools:context=".BugsActionsActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,7 +56,6 @@
         </Button>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
