--- a/app/src/main/res/layout/ravindu_activity_edit_bug.xml
+++ b/app/src/main/res/layout/ravindu_activity_edit_bug.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
     android:orientation="vertical"
-    tools:context=".ui.getintouch.EditBugActivity"
-    android:background="@color/colorHome">
+    tools:context=".EditBugActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,6 +41,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVbugId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/BugIdTextStirng"
@@ -67,6 +68,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVfiledDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/staticDateString"
@@ -93,6 +95,7 @@
         </TextView>
 
         <EditText
+            android:id="@+id/ETBugDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/BugDescriptionText">
