--- a/app/src/main/res/layout/ravindu_activity_main.xml
+++ b/app/src/main/res/layout/ravindu_activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".ui.getintouch.GetInTouchActivity"
-    android:background="@color/colorHome">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -173,10 +173,7 @@
         android:id="@+id/btnRadmin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:background="#000000"
-        android:text="@string/strAdmin"
-        android:textColor="#FFB300" />
+        android:text="@string/adminStr" />
 
 
 </LinearLayout>
