--- a/app/src/main/res/layout/ravindu_activity_view_bug.xml
+++ b/app/src/main/res/layout/ravindu_activity_view_bug.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
     android:orientation="vertical"
-    tools:context=".ui.getintouch.ViewBugActivity"
-    android:background="@color/colorHome">
+    tools:context=".ViewBugActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,6 +24,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVbugIdActivityVIewBug"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/BugIdTextStirng"
@@ -50,6 +51,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVfiledDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/staticDateString"
@@ -59,8 +61,6 @@
         </TextView>
 
     </LinearLayout>
-
-
 
 
     <LinearLayout
@@ -79,6 +79,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVBugDescriprionActivityViewBug"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/BugDescriptionText"
@@ -105,6 +106,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/TVStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/BugStatusStaticText"
@@ -118,15 +120,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:padding="20dp"
-        android:baselineAligned="false">
+        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:padding="10dp">
 
 
             <Button
@@ -144,8 +146,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/deleteBugBtn"
@@ -158,8 +160,6 @@
             </Button>
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
