--- a/app/src/main/res/layout/manuka_activity_advertisement.xml
+++ b/app/src/main/res/layout/manuka_activity_advertisement.xml
@@ -263,6 +263,7 @@
 
                 <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adView3"
+                    android:layout_marginTop="@dimen/_4sdp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     ads:adSize="LARGE_BANNER"
@@ -297,6 +298,15 @@
                         android:layout_height="wrap_content" />
 
                 </LinearLayout>
+
+                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adView4"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    ads:adSize="LARGE_BANNER"
+                    ads:adUnitId="ca-app-pub-2612826891658748/5962491746"/>
+
 
             </LinearLayout>
 
