--- a/app/src/main/res/layout/ravindu_activity_view_bug.xml
+++ b/app/src/main/res/layout/ravindu_activity_view_bug.xml
@@ -8,160 +8,203 @@
     android:orientation="vertical"
     tools:context=".ViewBugActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/IdString"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/TVbugIdActivityVIewBug"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/BugIdTextStirng"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/filedDateString"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/TVfiledDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/staticDateString"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/descriptionText"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/TVBugDescriprionActivityViewBug"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/BugDescriptionText"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/BugStatusTopicText"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/TVStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/BugStatusStaticText"
-            android:textColor="#000000"
-            android:textSize="14sp">
-
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp">
+            android:layout_height="match_parent"
+            android:background="@drawable/ravindu_gradient_color2"
+            android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-            <Button
-                android:id="@+id/editBugBtn"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/IdString"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+                <TextView
+                    android:id="@+id/TVbugIdActivityVIewBug"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/BugIdTextStirng"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filedDateString"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+                <TextView
+                    android:id="@+id/TVfiledDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/staticDateString"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/custom_button_blue"
-                android:text="@string/TextForEditBugBtn"
-                android:textColor="#000000">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-            </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/BugStatusTopicText"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
 
+                </TextView>
+
+                <TextView
+                    android:id="@+id/TVStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/BugStatusStaticText"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+            </LinearLayout>
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="10dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/deleteBugBtn"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/custom_button_red"
-                android:text="@string/textForDeleteBugBtn"
-                android:textColor="#000000">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-            </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/descriptionText"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
 
+                </TextView>
+
+                <TextView
+                    android:id="@+id/TVBugDescriprionActivityViewBug"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/BugDescriptionText"
+                    android:textColor="#000000"
+                    android:textSize="14sp">
+
+                </TextView>
+
+            </LinearLayout>
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/colorHome">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/ravindu_gradient_color1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+                android:padding="20dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="10dp">
 
 
-    </LinearLayout>
+                    <Button
+                        android:id="@+id/editBugBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/colorPrimaryDark"
+                        android:text="@string/TextForEditBugBtn"
+                        android:textColor="#F8F8F8">
+
+                    </Button>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="10dp">
+
+                    <Button
+                        android:id="@+id/deleteBugBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/btnColor1"
+                        android:text="@string/textForDeleteBugBtn"
+                        android:textColor="#000000">
+
+                    </Button>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
