commit by ravindu added bug and suggestions functionality

--- a/app/src/main/res/layout/ravindu_get_in_touch_admin_panel.xml
+++ b/app/src/main/res/layout/ravindu_get_in_touch_admin_panel.xml
@@ -65,6 +65,13 @@
                 android:text="@string/ravinduViewBugsStr"
                 android:textColor="#FFFFFF" />
 
+            <Button
+                android:id="@+id/btnStat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="bugStatisticSwitch"
+                android:text="@string/ravindu_bug_statisticStr" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
